<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="10dp"
android:padding="10dp"
android:elevation="10dp"
app:cardCornerRadius="12dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_margin="5dp"
    android:background="@color/barCol"
    android:alpha="0.8"
    >

    <TextView
        android:id="@+id/nameJournalListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"

        android:layout_weight="1"
        android:elevation="10dp"
        android:text="@string/gina"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/ic_menu_share" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <ImageView
        android:id="@+id/imageViewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/draw1" />

    <TextView
        android:id="@+id/title_TextView_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"

        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thought_TextView_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/thoughts"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/time_TextView_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/today"
        android:textSize="16sp"
        android:textStyle="italic" />
</LinearLayout>
</androidx.cardview.widget.CardView>

