<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalThought">

    <ImageView
        android:id="@+id/imagePostedImageView"
        android:layout_width="385dp"

        android:layout_height="232dp"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/draw1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_marginTop="5dp"
        android:id="@+id/postImageIconImageView"
        android:layout_width="103dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePostedImageView"
        app:layout_constraintEnd_toEndOf="@+id/imagePostedImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/nameJournalPostTextView"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginStart="20dp"
        android:text="@string/textview"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/imagePostedImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/dataJournalPostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/textviewToday"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameJournalPostTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTitlePostJournal"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:background="@drawable/bar_draw"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:hint="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePostedImageView" />


    <EditText
        android:textColor="@android:color/white"
        android:id="@+id/editTextPersonThoughtPostJournal"
        android:layout_width="358dp"
        android:layout_height="142dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bar_draw"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitlePostJournal"
        app:layout_constraintVertical_bias="0.046" />

    <ProgressBar
        android:id="@+id/progressBarPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/savePostJournalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonThoughtPostJournal"
        app:layout_constraintVertical_bias="0.204"
        android:visibility="gone"/>

    <Button
        android:id="@+id/savePostJournalButton"
        android:layout_width="383dp"
        android:layout_height="59dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonThoughtPostJournal"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>